# espace-libre

./: README.md  fr.flodavid.espaceLibre.yml  meson.build
.github/workflows/: ci.yml  merge.yml  release.yml
data/: Application.css  espaceLibre.desktop.in  espaceLibre.gresource.xml  espaceLibre.gschema.xml  espaceLibre.metainfo.xml.in  meson.build
po/: POTFILES  fr.flodavid.espaceLibre.pot  fr.po
po/extra/: POTFILES  extra.pot  fr.po
src/: Application.vala  DiskEntry.vala  DisksManager.vala  FstabVolume.vala  GenericVolume.vala  MainWindow.vala  VolumeEntry.vala  VolumesManager.vala  meson.build
src/Views/: DisksView.vala  SelectedDiskView.vala  SelectedVolumeView.vala  VolumesView.vala
src/Widgets/: DiskImage.vala  DiskRow.vala  MountPointRow.vala  UsedSpaceBar.vala  VolumeRow.vala
