sources = [
    'Application.vala',
    'FstabVolume.vala',
    'GenericVolume.vala',
    'VolumeEntry.vala',
    'MainWindow.vala',
    'VolumesManager.vala',
    'Views/SelectedDiskView.vala',
    'Views/DisksView.vala',
    'Widgets/DiskRow.vala',
    'Widgets/MountPointRow.vala',
    'Widgets/UsedSpaceBar.vala',
]

executable(
    meson.project_name(),
    gresource,
    sources,
    config_file,
    dependencies: dependencies,
    install: true
)
