sources = [
    'Application.vala',
    'VolumeEntry.vala',
    'MainWindow.vala',
    'VolumesManager.vala',
    'Views/SelectedVolumeView.vala',
    'Views/VolumesView.vala',
    'Widgets/VolumeRow.vala',
    'Widgets/MountPointRow.vala',
    'Widgets/UsedSpaceBar.vala',
]

executable(
    meson.project_name(),
    gresource,
    sources,
    config_file,
    dependencies: dependencies,
    install: true
)
