sources = [
    'Application.vala',
    'MainWindow.vala',
    'VolumeEntry.vala',
    'VolumesManager.vala',
    'Views/SelectedVolumeView.vala',
    'Views/VolumesView.vala',
    'Widgets/MountPointRow.vala',
    'Widgets/UsedSpaceBar.vala',
    'Widgets/VolumeRow.vala',
]

executable(
    meson.project_name(),
    gresource,
    sources,
    config_file,
    dependencies: dependencies,
    install: true
)
